--- a/styles/pin_close.css
+++ b/styles/pin_close.css
@@ -16,9 +16,58 @@ body {
   background-color: #f4f7f6;
 }
 
+header {
+  position: absolute;
+  z-index: 99999;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #fcfcfc;
+  padding: 10px 20px;
+  font-size: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+header a {
+  text-decoration: none;
+  color: #a0a0a0;
+}
+
+header a:hover {
+  color: #545454;
+}
+
+header > span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 20px;
+  padding-left: 20px;
+  color: #a0a0a0;
+  border-left: 1px solid #a0a0a0;
+}
+
+header > span svg {
+  margin: 0 10px 0 10px;
+  width: 25px;
+  stroke: #a0a0a0;
+  stroke-width: 1.7;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+
+header > span .current {
+  color: #545454;
+}
+
 .back {
   position: absolute;
-  top: 40px;
+  top: 80px;
   left: 5vw;
 }
 
@@ -152,6 +201,7 @@ main {
   text-decoration: none;
   text-transform: capitalize;
   color: #2e2e2e;
+  cursor: pointer;
 }
 
 .prevw .options_menu a:hover, .prevw .options_menu a:focus {
@@ -228,11 +278,10 @@ main {
   left: 0;
   -ms-grid-columns: auto auto;
       grid-template-columns: auto auto;
-  gap: 10px;
-  place-items: center;
+  gap: 17px;
   place-content: center;
   margin-top: 5.5px;
-  padding-left: 25px;
+  padding-left: 16px;
   width: 57px;
   height: 30px;
   border-radius: 10px;
