--- a/styles/pin_close.scss
+++ b/styles/pin_close.scss
@@ -10,9 +10,49 @@ body {
   background-color: color(primary);
 }
 
+header {
+  position: absolute;
+  z-index: 99999;
+  top: 0;
+  left: 0; right: 0;
+  background-color: color(cards);
+  padding: 10px 20px;
+  font-size: 25px;
+  display: flex;
+
+  a {
+    text-decoration: none;
+    color: color(icons);
+    &:hover {
+      color: darken(color(icons), 30);
+    }
+  }
+
+  > span {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    padding-left: 20px;
+    color: color(icons);
+    border-left: 1px solid color(icons);
+    svg {
+      margin: 0 10px 0 10px;
+      width: 25px;
+      stroke: color(icons);
+      stroke-width: 1.7;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+    }
+
+    .current {
+      color: darken(color(icons), 30);
+    }
+  }
+}
+
 .back {
   position: absolute;
-  top: 40px; left: 5vw;
+  top: 80px; left: 5vw;
   a {
     display: flex;
     align-items: center;
@@ -115,6 +155,7 @@ main {
       text-decoration: none;
       text-transform: capitalize;
       color: color(main_text);
+      cursor: pointer;
       &:hover, &:focus {
         background-color: darken(color(cards), 10);
         svg {
@@ -173,11 +214,10 @@ main {
         z-index: 999;
         left: 0;
         grid-template-columns: auto auto;
-        gap: 10px;
-        place-items: center;
+        gap: 17px;
         place-content: center;
         margin-top: 5.5px;
-        padding-left: 25px;
+        padding-left: 16px;
         width: 57px;
         height: 30px;
         border-radius: 10px;
