--- a/styles/boards.css
+++ b/styles/boards.css
@@ -139,6 +139,12 @@ main > input:checked + .add_board form {
   transition: opacity 400ms ease-in-out;
 }
 
+main > input:checked + .add_board form .hoverme {
+  opacity: 1;
+  -webkit-transition: opacity 500ms ease-in-out 3s;
+  transition: opacity 500ms ease-in-out 3s;
+}
+
 main .add_board {
   position: relative;
   width: 100%;
@@ -201,6 +207,17 @@ main .add_board form > span {
   color: rgba(238, 94, 94, 0.9);
 }
 
+main .add_board form .hoverme {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  bottom: auto;
+  left: auto;
+  font-size: 0.5em;
+  color: #a0a0a0;
+  opacity: 0;
+}
+
 main .add_board form .name {
   -ms-grid-row-align: center;
       align-self: center;
@@ -218,6 +235,17 @@ main .add_board form .name {
           align-items: flex-end;
 }
 
+main .add_board form .name__clickme {
+  position: absolute;
+  bottom: -6px;
+  left: 19px;
+  font-size: 0.4em;
+  color: #a0a0a0;
+  opacity: 0;
+  -webkit-transition: opacity 500ms ease-in-out 0.5s;
+  transition: opacity 500ms ease-in-out 0.5s;
+}
+
 main .add_board form .name #board_color {
   position: absolute;
   top: 0;
@@ -231,6 +259,10 @@ main .add_board form .name #board_color:focus + label svg {
   opacity: 0.5;
 }
 
+main .add_board form .name #board_color:focus ~ .name__clickme {
+  opacity: 1;
+}
+
 main .add_board form .name label {
   position: relative;
   cursor: pointer;
@@ -241,6 +273,10 @@ main .add_board form .name label:hover svg {
   -webkit-animation: svg_colors 5s infinite;
           animation: svg_colors 5s infinite;
   opacity: 0.5;
+}
+
+main .add_board form .name label:hover ~ .name__clickme {
+  opacity: 1;
 }
 
 main .add_board form .name label svg {
@@ -259,6 +295,10 @@ main .add_board form .name #board_name {
   font-family: Montserrat;
   font-size: 1em;
   color: #2e2e2e;
+}
+
+main .add_board form .name #board_name:hover, main .add_board form .name #board_name:focus {
+  border-color: #ee5e5e;
 }
 
 main .add_board form .board__add__submit {
@@ -282,6 +322,13 @@ main .add_board form .board__add__submit input {
   top: 0;
   left: 0;
   opacity: 0;
+}
+
+main .add_board form .required {
+  color: #a0a0a0;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
 }
 
 main .board {
@@ -370,11 +417,22 @@ main .board__info {
 main .board__info__name {
   -ms-flex-item-align: center;
       align-self: center;
+  justify-self: flex-start;
   font-size: 1.4em;
-  color: #2e2e2e;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  cursor: pointer;
+  text-decoration: none;
+  color: #2e2e2e;
+}
+
+main .board__info__name:hover, main .board__info__name:focus {
+  margin: -0.3em -0.9em;
+  padding: 0.3em 0.6em 0.3em 0.9em;
+  border-top-right-radius: 1em;
+  border-bottom-right-radius: 1em;
+  background-color: #f4f4f4;
 }
 
 main .board__info__name span {
