--- a/styles/boards.scss
+++ b/styles/boards.scss
@@ -99,6 +99,10 @@ main {
         opacity: 1;
         pointer-events: all;
         transition: opacity 400ms ease-in-out;
+        .hoverme {
+          opacity: 1;
+          transition: opacity 500ms ease-in-out 3s;
+        }
       }
     }
   }
@@ -148,6 +152,15 @@ main {
         color: rgba(238, 94, 94, 0.9);
       }
 
+      .hoverme {
+        position: absolute;
+        top: 5px; right: 5px;
+        bottom: auto; left: auto;
+        font-size: 0.5em;
+        color: color(icons);
+        opacity: 0;
+      }
+
       .name {
         align-self: center;
         padding: 5px 20px;
@@ -159,6 +172,14 @@ main {
         gap: 10px;
         align-items: flex-end;
 
+        &__clickme {
+          position: absolute;
+          bottom: -6px; left: 19px;
+          font-size: 0.4em;
+          color: color(icons);
+          opacity: 0;
+          transition: opacity 500ms ease-in-out 0.5s;
+        }
 
         #board_color {
           position: absolute;
@@ -167,6 +188,9 @@ main {
           &:focus + label svg{
             animation: svg_colors 5s infinite;
             opacity: 0.5;
+          }
+          &:focus ~ .name__clickme {
+            opacity: 1;
           }
         }
 
@@ -178,6 +202,9 @@ main {
           &:hover svg{
             animation: svg_colors 5s infinite;
             opacity: 0.5;
+          }
+          &:hover ~ .name__clickme {
+            opacity: 1;
           }
           svg {
             --color: lightgrey;
@@ -196,6 +223,9 @@ main {
           font-family: Montserrat;
           font-size: 1em;
           color: color(main_text);
+          &:hover, &:focus {
+            border-color: rgba(238, 94, 94, 1);
+          }
         }
       }
 
@@ -216,6 +246,12 @@ main {
           top: 0; left: 0;
           opacity: 0;
         }
+      }
+
+      .required {
+        color: color(icons);
+        position: absolute;
+        bottom: 20px; left: 20px;
       }
 
     }
@@ -284,9 +320,20 @@ main {
 
       &__name {
         align-self: center;
+        justify-self: flex-start;
         font-size: 1.4em;
-        color: color(main_text);
         display: flex;
+        cursor: pointer;
+        text-decoration: none;
+        color: color(main_text);
+
+        &:hover, &:focus {
+          margin: -0.3em -0.9em;
+          padding: 0.3em 0.6em 0.3em 0.9em;
+          border-top-right-radius: 1em;
+          border-bottom-right-radius: 1em;
+          background-color: darken(color(cards), 3);
+        }
 
         span {
           align-self: flex-end;
