--- a/styles/pin_close.scss
+++ b/styles/pin_close.scss
@@ -91,6 +91,7 @@ main {
 
 .image {
   height: 36.6vw;
+  width: 65vw;
   img {
     width: 100%;
     height: 100%;
@@ -100,10 +101,12 @@ main {
 
 .prevw {
   padding: 3vw;
+  padding-bottom: 0;
   position: relative;
   display: grid;
+  height: 33.6vw;
   grid-template-rows: auto auto auto auto 1fr;
-  gap: 1vw;
+  gap: 0.8vw;
   justify-items: flex-start;
   background-color: color(cards);
   color: color(main_text);
@@ -111,7 +114,9 @@ main {
 
   &__name {
     font-size: 2.7vw;
+    line-height: 2.7vw;
     font-weight: 300;
+    margin-bottom: 0.4vw;
   }
 
   > input {
@@ -243,6 +248,7 @@ main {
 
   &__tags {
     font-size: 1vw;
+    line-height: 1.8vw;
     margin-bottom: 0.5vw;
     a {
       padding: 0.1em 0.3em;
@@ -259,45 +265,50 @@ main {
   }
 
   &__linkbox {
-    font-size: 1vw;
-    height: 1.4em;
+    justify-self: flex-start;
+    font-size: 15px;
     border: 1px solid color(main_text);
-    border-radius: 0.3em;
-    padding: 0.1em 0.3em;
-    overflow: hidden;
+    border-radius: 0.4em;
+
     a {
-      text-decoration: none;
-      display: flex;
-      justify-content: space-between;
-      height: 1.4em;
+      height: 18px;
+      padding: 0.1em 0 0.1em 0.3em;
+      display: grid;
+      grid-template-columns: auto 30px;
 
       div {
-        line-height: 1.4em;
+        height: 18px;
+        max-width: 230px;
         overflow: hidden;
         text-overflow: ellipsis;
+        white-space: nowrap;
       }
-
       svg {
-        align-self: center;
-        width: 1.8vw;
-        height: 1.8vw;
+        position: relative;
+        bottom: 3px;
+        width: 25px;
+        height: 25px;
         stroke: color(main_text);
-        stroke-width: 1.3;
+        stroke-width: 1.5;
+        stroke-linecap: round;
         transform: rotate(-45deg);
       }
     }
   }
 
   &__date {
-    font-size: 1.2vw;
+    margin-top: 0.5vw;
+    font-size: 1vw;
   }
 
   &__description {
     font-size: 1vw;
     width: 100%;
-    padding: 2vw 3vw;
-    margin: 2vw -3vw;
+    // height: 100%;
+    padding: 1.5vw 3vw 0 3vw;
+    margin: 1vw -3vw 2vw -3vw;
     border-top: 1px solid color(icons);
+    overflow: scroll;
   }
 
 }
